--- a/admin.html
+++ b/admin.html
@@ -42,7 +42,7 @@
 
     <div id="overlay" class="overlay"></div>
     <aside id="sidebar" class="sidebar">
-        <div class="sidebar-header">
+        <div class="sidebar-header"><span class="sidebar-title">MENU</span>
             <button id="close-sidebar" class="sidebar-close">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -72,7 +72,7 @@
     </aside>
 
     <main style="padding: 1rem; padding-top: 2rem;">
-        <div class="admin-header-title">ADMIN PANEL</div>
+
 
         <!-- Toggle (Products / Orders) -->
         <div class="admin-toggle-container">
@@ -81,6 +81,12 @@
                 <button id="btn-orders" class="toggle-btn">orders</button>
             </div>
         </div>
+
+        <!-- Add Product Button -->
+        <button id="add-product-btn" class="filter-btn"
+            style="margin-bottom: 1rem; width: auto; margin-left: auto; display: block;">
+            + ADD PRODUCT
+        </button>
 
         <!-- Filters (New, In-Process, Completed) -->
         <div id="admin-filters" class="admin-filters" style="display: none;">
@@ -94,7 +100,38 @@
             <!-- JS renders items here -->
         </div>
 
+        <!-- Product Modal -->
+        <div id="product-modal" class="overlay"
+            style="display: none; align-items: center; justify-content: center; z-index: 2000;">
+            <div
+                style="background: white; padding: 2rem; border-radius: 8px; width: 90%; max-width: 400px; position: relative;">
+                <button id="close-modal"
+                    style="position: absolute; top: 1rem; right: 1rem; background: none; border: none; font-size: 1.5rem; cursor: pointer;">&times;</button>
+                <h2 id="modal-title" style="text-align: center; margin-bottom: 1rem;">ADD PRODUCT</h2>
+                <form id="product-form" style="display: flex; flex-direction: column; gap: 1rem;">
+                    <div style="text-align: center;">
+                        <label for="product-images" class="filter-btn"
+                            style="display: inline-block; cursor: pointer; font-size: 0.8rem; padding: 0.5rem 1rem;">+
+                            UPLOAD IMAGES (MAX 3)</label>
+                        <input type="file" id="product-images" accept="image/*" multiple style="display: none;">
+                        <div id="image-preview-container"
+                            style="display: flex; gap: 0.5rem; justify-content: center; margin-top: 0.5rem;"></div>
+                        <p style="font-size: 0.7rem; color: #666; margin-top: 0.25rem;">Recommended 1:1 Aspect Ratio</p>
+                    </div>
+                    <input type="text" id="product-name" placeholder="Product Name" required
+                        style="padding: 0.5rem; border: 1px solid black;">
+                    <input type="text" id="product-price" placeholder="Price" required
+                        style="padding: 0.5rem; border: 1px solid black;">
+                    <input type="number" id="product-qty" placeholder="Quantity" required
+                        style="padding: 0.5rem; border: 1px solid black;">
+                    <button type="submit" class="filter-btn">SAVE</button>
+                </form>
+            </div>
+        </div>
     </main>
+
+
+
 
     <script type="module" src="/main.js"></script>
     <script type="module" src="/admin.js"></script>
