Complete e-commerce features: Dynamic products, Checkout flow, Admin panel, and UI polish

--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Mobile E-commerce</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -62,9 +63,39 @@
         </div>
     </aside>
 
-    <main style="padding: 1rem;">
-        <h1 class="text-red">About Us</h1>
-        <p>Learn more about our company.</p>
+    <main style="padding: 2rem 1.5rem; max-width: 800px; margin: 0 auto; line-height: 1.8; color: #333;">
+        <h1 class="text-red"
+            style="text-align: center; margin-bottom: 2rem; font-family: 'Great Vibes', cursive; font-size: 3.5rem;">
+            About Us</h1>
+
+        <p style="margin-bottom: 1.5rem; font-size: 1.1rem;">
+            At <strong>Maa Handloom</strong>, we celebrate the timeless beauty of handloom and the artisans who bring it
+            to life. Rooted in tradition and driven by quality, our journey began with a simple vision — to preserve
+            India’s rich weaving heritage while making authentic handcrafted textiles accessible to today’s world.
+        </p>
+
+        <p style="margin-bottom: 1.5rem;">
+            Each piece in our collection is thoughtfully created using traditional techniques passed down through
+            generations. From the careful selection of yarns to the intricate weaving process, every product reflects
+            patience, skill, and artistry. No two creations are exactly alike — and that uniqueness is what makes
+            handloom truly special.
+        </p>
+
+        <p style="margin-bottom: 1.5rem;">
+            We work closely with skilled weavers and artisan communities, ensuring ethical practices, fair wages, and
+            sustainable craftsmanship. By choosing our products, you are not just purchasing a textile — you are
+            supporting livelihoods, culture, and centuries-old traditions.
+        </p>
+
+        <p style="margin-bottom: 1.5rem;">
+            Blending heritage with contemporary design, <strong>Maa Handloom</strong> offers creations that are elegant,
+            durable, and meaningful. Whether it’s for everyday wear or special occasions, our handloom products are
+            designed to be cherished for years to come.
+        </p>
+
+        <p style="text-align: center; font-style: italic; font-weight: bold; margin-top: 3rem; color: #2C1B10;">
+            Thank you for being part of our story and for supporting handmade.
+        </p>
     </main>
 
 
@@ -72,7 +103,8 @@
     <footer>
         <div class="footer-links">
             <a href="#" class="footer-link">terms & condition</a>
-            <a href="#" class="footer-link">contact no.</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products"
+                target="_blank" class="footer-link">contact no.</a>
             <a href="#" class="footer-link">location by maps</a>
         </div>
         <div class="social-icons">
