--- a/categories.html
+++ b/categories.html
@@ -68,33 +68,40 @@
 
         <div class="category-grid-page" style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
             <!-- Category 1 -->
-            <a href="categories.html?cat=Surat Silk Special" class="cat-page-card">
-                <div class="cat-page-circle">S</div>
+            <a href="surat-silk.html" class="cat-page-card">
+                <div class="cat-page-circle" style="overflow: hidden; border: 3px solid #DFC186;">
+                    <img src="/categories/surat-silk.jpg" alt="Surat Silk"
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 <div class="cat-page-label">Surat Silk<br>Special</div>
             </a>
             <!-- Category 2 -->
-            <a href="categories.html?cat=Handloom Special" class="cat-page-card">
-                <div class="cat-page-circle">H</div>
+            <a href="handloom-special.html" class="cat-page-card">
+                <div class="cat-page-circle" style="overflow: hidden; border: 3px solid #DFC186;">
+                    <img src="/categories/handloom-special.png" alt="Handloom Special"
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 <div class="cat-page-label">Handloom<br>Special</div>
             </a>
             <!-- Category 3 -->
-            <a href="categories.html?cat=Shantipuri Special" class="cat-page-card">
-                <div class="cat-page-circle">S</div>
+            <a href="shantipuri-special.html" class="cat-page-card">
+                <div class="cat-page-circle" style="overflow: hidden; border: 3px solid #DFC186;">
+                    <img src="/categories/shantipuri-special.png" alt="Shantipuri Special"
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 <div class="cat-page-label">Shantipuri<br>Special</div>
             </a>
             <!-- Category 4 -->
-            <a href="categories.html?cat=Cotton Varieties" class="cat-page-card">
-                <div class="cat-page-circle">C</div>
+            <a href="cotton-varieties.html" class="cat-page-card">
+                <div class="cat-page-circle" style="overflow: hidden; border: 3px solid #DFC186;">
+                    <img src="/categories/cotton-varieties.png" alt="Cotton Varieties"
+                        style="width: 100%; height: 100%; object-fit: cover;">
+                </div>
                 <div class="cat-page-label">Cotton<br>Varieties</div>
             </a>
         </div>
 
-        <div id="category-products-container" style="margin-top: 3rem;">
-            <h2 id="selected-cat-title" style="text-align:center; margin-bottom: 1rem; text-transform:uppercase;"></h2>
-            <div id="category-grid" class="product-grid">
-                <!-- JS Populates this if URL param exists -->
-            </div>
-        </div>
+
     </main>
 
 
@@ -102,7 +109,8 @@
     <footer>
         <div class="footer-links">
             <a href="#" class="footer-link">terms & condition</a>
-            <a href="#" class="footer-link">contact no.</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products"
+                target="_blank" class="footer-link">contact no.</a>
             <a href="#" class="footer-link">location by maps</a>
         </div>
         <div class="social-icons">
