--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <a href="contact.html" class="menu-item">Contact Us</a>
       <a href="refund.html" class="menu-item">Refund & Return</a>
       <a href="track-order.html" class="menu-item">Track Your Order</a>
+      <a href="index.html" class="menu-item">Home</a>
     </div>
     <div class="admin-link-container">
       <a href="admin.html" class="admin-link">
@@ -80,7 +81,7 @@
 
     <!-- Filter Section -->
     <section class="filter-section">
-      <button class="filter-btn">
+      <button id="filter-btn" class="filter-btn">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
           stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <line x1="4" y1="21" x2="4" y2="14"></line>
@@ -99,20 +100,32 @@
 
     <!-- Categories -->
     <section class="category-list">
-      <a href="category.html?cat=Surat Silk Special" class="category-item" style="text-decoration: none;">
-        <div class="cat-circle">S</div>
+      <a href="surat-silk.html" class="category-item" style="text-decoration: none;">
+        <div class="cat-circle">
+          <img src="/categories/surat-silk.jpg" alt="Surat Silk"
+            style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </div>
         <span class="cat-label">Surat Silk<br>Special</span>
       </a>
-      <a href="category.html?cat=Handloom Special" class="category-item" style="text-decoration: none;">
-        <div class="cat-circle">H</div>
+      <a href="handloom-special.html" class="category-item" style="text-decoration: none;">
+        <div class="cat-circle">
+          <img src="/categories/handloom-special.png" alt="Handloom Special"
+            style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </div>
         <span class="cat-label">Handloom<br>Special</span>
       </a>
-      <a href="category.html?cat=Shantipuri Special" class="category-item" style="text-decoration: none;">
-        <div class="cat-circle">S</div>
+      <a href="shantipuri-special.html" class="category-item" style="text-decoration: none;">
+        <div class="cat-circle">
+          <img src="/categories/shantipuri-special.png" alt="Shantipuri Special"
+            style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </div>
         <span class="cat-label">Shantipuri<br>Special</span>
       </a>
-      <a href="category.html?cat=Cotton Varieties" class="category-item" style="text-decoration: none;">
-        <div class="cat-circle">C</div>
+      <a href="cotton-varieties.html" class="category-item" style="text-decoration: none;">
+        <div class="cat-circle">
+          <img src="/categories/cotton-varieties.png" alt="Cotton Varieties"
+            style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+        </div>
         <span class="cat-label">Cotton<br>Varieties</span>
       </a>
     </section>
@@ -128,7 +141,8 @@
   <footer>
     <div class="footer-links">
       <a href="#" class="footer-link">terms & condition</a>
-      <a href="#" class="footer-link">contact no.</a>
+      <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products"
+        target="_blank" class="footer-link">contact no.</a>
       <a href="#" class="footer-link">location by maps</a>
     </div>
     <div class="social-icons">
