--- a/refund.html
+++ b/refund.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Refund & Return - Mobile E-commerce</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -62,9 +63,70 @@
         </div>
     </aside>
 
-    <main style="padding: 1rem;">
-        <h1 class="text-red">Refund & Return Policy</h1>
-        <p>Our operational policies.</p>
+    <main style="padding: 2rem 1.5rem; max-width: 800px; margin: 0 auto;">
+        <h1 class="text-red"
+            style="text-align: center; margin-bottom: 2rem; font-family: 'Great Vibes', cursive; font-size: 3rem;">
+            Refund & Return Policy</h1>
+
+        <div class="policy-content" style="font-family: 'Inter', sans-serif; line-height: 1.6; color: #2C1B10;">
+            <p style="margin-bottom: 1.5rem; font-style: italic;">At Maa Handloom, every product is carefully
+                handcrafted by skilled artisans. Due to the nature of handloom and handmade products, slight variations
+                in color, texture, and weave are natural and make each piece unique. These are not considered defects.
+            </p>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">1. Eligibility for Returns</h3>
+            <p>We accept returns only under the following conditions:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>The product received is damaged, defective, or incorrect</li>
+                <li>The issue is reported within 48 hours of delivery</li>
+                <li>The product is unused, unwashed, and returned in its original condition with tags and packaging
+                    intact</li>
+            </ul>
+            <p>To initiate a return, please contact us at <strong>[your support email/phone]</strong> with:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>Order ID</li>
+                <li>Clear photos or videos showing the issue</li>
+            </ul>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">2. Non-Returnable Items</h3>
+            <p>The following items are not eligible for return or refund:</p>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>Products purchased during sales, discounts, or clearance offers</li>
+                <li>Customized or made-to-order items</li>
+                <li>Products damaged due to improper use, washing, or storage</li>
+                <li>Minor variations in color or weave inherent to handloom products</li>
+            </ul>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">3. Refund Policy</h3>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>Once the returned item is received and inspected, we will notify you of the approval or rejection of
+                    your refund</li>
+                <li>Approved refunds will be processed within 7–10 business days</li>
+                <li>Refunds will be issued to the original payment method only</li>
+                <li>Shipping charges are non-refundable, unless the return is due to our error</li>
+            </ul>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">4. Exchange Policy</h3>
+            <p style="margin-bottom: 1rem;">We offer exchanges only for damaged or incorrect products, subject to stock
+                availability. If the requested replacement is unavailable, a refund will be issued instead.</p>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">5. Return Shipping</h3>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>If the return is approved due to a defect or error on our part, we will arrange the return shipping
+                </li>
+                <li>In other approved cases, return shipping costs must be borne by the customer</li>
+            </ul>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">6. Cancellations</h3>
+            <ul style="list-style-type: disc; padding-left: 1.5rem; margin-bottom: 1rem;">
+                <li>Orders can be canceled within 12 hours of placing the order</li>
+                <li>Once an order is processed or shipped, it cannot be canceled</li>
+            </ul>
+
+            <h3 style="font-weight: 700; margin-top: 2rem; margin-bottom: 0.5rem;">7. Important Note</h3>
+            <p style="margin-bottom: 2rem;">Handloom products are delicate and artisanal in nature. We encourage
+                customers to read product descriptions carefully and review images before purchasing.</p>
+        </div>
     </main>
 
 
@@ -72,7 +134,7 @@
     <footer>
         <div class="footer-links">
             <a href="#" class="footer-link">terms & condition</a>
-            <a href="#" class="footer-link">contact no.</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products" target="_blank" class="footer-link">contact no.</a>
             <a href="#" class="footer-link">location by maps</a>
         </div>
         <div class="social-icons">
