--- a/surat-silk.html
+++ b/surat-silk.html
@@ -46,7 +46,7 @@
             style="padding: 1rem; text-align: center;  margin-bottom: 1rem;">
             <h1 id="category-title" class="text-red"
                 style="font-size: 3rem; text-align: center; font-family: 'Great Vibes', cursive; margin-bottom: 0.5rem; text-transform: capitalize;">
-                Category Name</h1>
+                Surat Silk Special</h1>
         </div>
 
         <!-- Product Grid -->
