--- a/track-order.html
+++ b/track-order.html
@@ -183,7 +183,7 @@
     <footer>
         <div class="footer-links">
             <a href="#" class="footer-link">terms & condition</a>
-            <a href="#" class="footer-link">contact no.</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products" target="_blank" class="footer-link">contact no.</a>
             <a href="#" class="footer-link">location by maps</a>
         </div>
         <div class="social-icons">
