--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="checkout-page-body">
     <nav class="navbar" style="justify-content: center; position: relative;">
         <a href="index.html" style="position: absolute; left: 1rem; color: white;">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -88,7 +88,7 @@
 
     <!-- Success Modal -->
     <div id="success-modal" class="overlay"
-        style="display: none; align-items: center; justify-content: center; z-index: 2000; background: rgba(0,0,0,0.5);">
+        style="display: none; align-items: center; justify-content: center; z-index: 3000; background: rgba(0,0,0,0.5);">
         <div class="auth-card" style="text-align: center; max-width: 90%;">
             <div
                 style="width: 80px; height: 80px; background: #22c55e; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem auto; color: white;">
@@ -99,8 +99,17 @@
             </div>
             <h2 style="color: #2C1B10; font-size: 1.5rem; margin-bottom: 0.5rem;">ORDER PLACED!</h2>
             <p style="color: #666; margin-bottom: 0.5rem;">Your payment was successful.</p>
-            <p style="font-weight: bold; font-size: 1.1rem; color: #2C1B10; margin-bottom: 2rem;">Order ID: <span
-                    id="success-order-id">ORD-123</span></p>
+            <p style="font-weight: bold; font-size: 1.1rem; color: #2C1B10; margin-bottom: 2rem;">
+                Order ID: <span id="success-order-id">ORD-123</span>
+                <button id="btn-copy-id" style="background:none; border:none; cursor:pointer; margin-left:0.5rem;"
+                    title="Copy Order ID">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                    </svg>
+                </button>
+            </p>
             <button id="success-continue-btn" class="auth-btn">CONTINUE SHOPPING</button>
         </div>
     </div>
