--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Mobile E-commerce</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -62,9 +63,34 @@
         </div>
     </aside>
 
-    <main style="padding: 1rem;">
-        <h1 class="text-red">Contact Us</h1>
-        <p>Get in touch with us.</p>
+    <main style="padding: 2rem 1.5rem; max-width: 600px; margin: 0 auto;">
+        <h1 class="text-red"
+            style="text-align: center; margin-bottom: 0.5rem; font-family: 'Great Vibes', cursive; font-size: 3rem;">
+            Contact Us</h1>
+        <p style="text-align:center; margin-bottom: 2rem; color: #666;">We'd love to hear from you. Send us a message!
+        </p>
+
+        <form id="contact-form" class="contact-form-card" style="display: flex; flex-direction: column; gap: 1rem;">
+            <!-- Name -->
+            <div class="input-group">
+                <input type="text" id="contact-name" class="modern-input" placeholder="Your Name" required>
+            </div>
+            <!-- Email -->
+            <div class="input-group">
+                <input type="email" id="contact-email" class="modern-input" placeholder="Your Email" required>
+            </div>
+            <!-- Phone -->
+            <div class="input-group">
+                <input type="tel" id="contact-phone" class="modern-input" placeholder="Your Phone (Optional)">
+            </div>
+            <!-- Message -->
+            <div class="input-group">
+                <textarea id="contact-message" class="modern-input" placeholder="Your Message" rows="5"
+                    style="resize: none;" required></textarea>
+            </div>
+
+            <button type="submit" class="btn-save-modern" style="margin-top: 1rem;">SEND MESSAGE</button>
+        </form>
     </main>
 
 
@@ -72,7 +98,7 @@
     <footer>
         <div class="footer-links">
             <a href="#" class="footer-link">terms & condition</a>
-            <a href="#" class="footer-link">contact no.</a>
+            <a href="https://wa.me/918972076182?text=Hi%20Maa%20Handloom,%20I%20have%20a%20query%20regarding%20products" target="_blank" class="footer-link">contact no.</a>
             <a href="#" class="footer-link">location by maps</a>
         </div>
         <div class="social-icons">
