--- a/admin.html
+++ b/admin.html
@@ -84,16 +84,30 @@
         </div>
 
         <!-- Add Product Button -->
-        <button id="add-product-btn" class="filter-btn"
-            style="margin-bottom: 1rem; width: auto; margin-left: auto; display: block;">
+        <button id="add-product-btn" class="btn-add-product-modern">
             + ADD PRODUCT
         </button>
 
-        <!-- Filters (New, In-Process, Completed) -->
-        <div id="admin-filters" class="admin-filters" style="display: none;">
-            <button class="filter-chip active" data-filter="new">NEW</button>
-            <button class="filter-chip" data-filter="in-process">IN-PROCESS</button>
-            <button class="filter-chip" data-filter="completed">COMPLETED</button>
+        <!-- Product Filters -->
+        <div id="product-filters" class="admin-filters" style="display: none;">
+            <div style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center; width: 100%;">
+                <button class="filter-chip active" data-type="product" data-filter="all">ALL</button>
+                <button class="filter-chip" data-type="product" data-filter="Surat Silk Special">SILK</button>
+                <button class="filter-chip" data-type="product" data-filter="Handloom Special">HANDLOOM</button>
+                <button class="filter-chip" data-type="product" data-filter="Cotton Varieties">COTTON</button>
+            </div>
+            <div style="width: 100%; display: flex; justify-content: center; margin-top: 0.5rem;">
+                <button class="filter-chip" data-type="product" data-filter="out-of-stock"
+                    style="border-color: red; color: red;">OUT OF STOCK</button>
+            </div>
+        </div>
+
+        <!-- Order Filters -->
+        <div id="order-filters" class="admin-filters" style="display: none;">
+            <button class="filter-chip active" data-type="order" data-filter="new">NEW</button>
+            <button class="filter-chip" data-type="order" data-filter="in-process">IN-PROCESS</button>
+            <button class="filter-chip" data-type="order" data-filter="in-transit">IN-TRANSIT</button>
+            <button class="filter-chip" data-type="order" data-filter="completed">COMPLETED</button>
         </div>
 
         <!-- List Container -->
@@ -101,13 +115,7 @@
             <!-- JS renders items here -->
         </div>
 
-        <!-- Danger Zone -->
-        <div style="margin-top: 3rem; text-align: center; border-top: 1px solid #ccc; padding-top: 1rem;">
-            <button id="reset-db-btn"
-                style="background: transparent; border: 1px solid red; color: red; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; font-size: 0.8rem;">
-                ⚠ RESET ALL PRODUCTS
-            </button>
-        </div>
+
 
         <!-- Product Modal -->
         <div id="product-modal" class="overlay modal-overlay"
@@ -150,6 +158,128 @@
         style="display: none; align-items: center; justify-content: center; z-index: 2000;">
         <div class="modal-modern" style="width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto;">
             <button id="close-order-modal" class="close-modal-modern">&times;</button>
+            <div class="modal-brand-header">
+                <div class="modal-brand-text">Maa Handloom</div>
+                <div class="modal-brand-sub">ORDER DETAILS</div>
+            </div>
+
+            <div style="font-size: 0.9rem; margin-bottom: 1.5rem;">
+                <!-- Header Info -->
+                <div class="info-row">
+                    <span class="info-label">Order ID</span>
+                    <span id="view-order-id" class="info-value" style="color: var(--color-primary);"></span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">Date</span>
+                    <span id="view-order-date" class="info-value"></span>
+                </div>
+                <div class="info-row">
+                    <span class="info-label">Status</span>
+                    <span id="view-order-status" class="status-pill" style="font-size: 0.7rem;"></span>
+                </div>
+
+                <!-- Customer Info -->
+                <div class="customer-card">
+                    <div class="customer-row">
+                        <span class="customer-label">Name</span>
+                        <span id="view-customer-name" class="customer-val"></span>
+                    </div>
+                    <div class="customer-row">
+                        <span class="customer-label">Phone</span>
+                        <span id="view-customer-phone" class="customer-val"></span>
+                    </div>
+                    <div class="customer-row">
+                        <span class="customer-label">Location</span>
+                        <span id="view-customer-location" class="customer-val"></span>
+                    </div>
+                </div>
+
+                <!-- Products -->
+                <div class="items-header">Items Purchased</div>
+                <div id="view-order-items" style="margin-bottom: 1.5rem;">
+                    <!-- Items populated by JS -->
+                </div>
+
+                <!-- Total -->
+                <div class="total-row">
+                    <span>Total</span>
+                    <span id="view-order-total"></span>
+                </div>
+            </div>
+
+            <!-- Action: Change Status -->
+            <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #eee;">
+                <label style="display: block; margin-bottom: 0.5rem; font-size: 0.8rem; color: #666;">UPDATE
+                    STATUS</label>
+                <div style="display: flex; gap: 0.5rem;">
+                    <select id="modal-status-select" class="modern-input"
+                        style="flex: 1; margin: 0; background: white;">
+                        <option value="new">NEW</option>
+                        <option value="in-process">IN-PROCESS</option>
+                        <option value="in-transit">IN-TRANSIT</option>
+                        <option value="completed">COMPLETED</option>
+                    </select>
+                    <button id="modal-update-status-btn" class="btn-save-modern"
+                        style="width: auto; margin: 0; padding: 0 1.5rem;">UPDATE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- List Container -->
+    <div id="admin-list" class="admin-list">
+        <!-- JS renders items here -->
+    </div>
+
+    <!-- Danger Zone -->
+    <div style="margin-top: 3rem; text-align: center; border-top: 1px solid #ccc; padding-top: 1rem;">
+        <button id="reset-db-btn"
+            style="background: transparent; border: 1px solid red; color: red; padding: 0.5rem 1rem; border-radius: 4px; cursor: pointer; font-size: 0.8rem;">
+            ⚠ RESET ALL PRODUCTS
+        </button>
+    </div>
+
+    <!-- Product Modal -->
+    <div id="product-modal" class="overlay modal-overlay"
+        style="display: none; align-items: center; justify-content: center; z-index: 2000;">
+        <div class="modal-modern">
+            <button id="close-modal" class="close-modal-modern">&times;</button>
+            <h2 id="modal-title">ADD PRODUCT</h2>
+            <form id="product-form" style="display: flex; flex-direction: column; gap: 0.5rem;">
+                <div style="text-align: center; margin-bottom: 1rem;">
+                    <label for="product-images" class="btn-upload-modern">
+                        + UPLOAD IMAGES (MAX 3)
+                    </label>
+                    <input type="file" id="product-images" accept="image/*" multiple style="display: none;">
+                    <div id="image-preview-container"
+                        style="display: flex; gap: 0.5rem; justify-content: center; margin-top: 0.5rem;"></div>
+                    <p style="font-size: 0.7rem; color: #666; margin-top: 0.25rem;">Recommended 1:1 Aspect Ratio</p>
+                </div>
+                <input type="text" id="product-name" placeholder="Product Name" required class="modern-input">
+                <textarea id="product-desc" placeholder="Product Description" class="modern-input" rows="3"
+                    style="resize: none;"></textarea>
+                <input type="text" id="product-price" placeholder="Price" required class="modern-input">
+                <!-- Category Dropdown -->
+                <select id="product-category" class="modern-input" required style="background: white;">
+                    <option value="" disabled selected>Select Category</option>
+                    <option value="Surat Silk Special">Surat Silk Special</option>
+                    <option value="Handloom Special">Handloom Special</option>
+                    <option value="Shantipuri Special">Shantipuri Special</option>
+                    <option value="Cotton Varieties">Cotton Varieties</option>
+                </select>
+                <!-- Qty input with spinner can be styled but standard input is fine for now, just apply class -->
+                <input type="number" id="product-qty" placeholder="Quantity" required class="modern-input">
+                <button type="submit" class="btn-save-modern">SAVE</button>
+            </form>
+        </div>
+    </div>
+    </main>
+
+    <!-- Order Details Modal -->
+    <div id="order-modal" class="overlay modal-overlay"
+        style="display: none; align-items: center; justify-content: center; z-index: 2000;">
+        <div class="modal-modern" style="width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto;">
+            <button id="close-order-modal" class="close-modal-modern">&times;</button>
             <h2 style="margin-bottom: 1rem; border-bottom: 1px solid #eee; padding-bottom: 0.5rem;">ORDER DETAILS</h2>
 
             <div style="font-size: 0.9rem; margin-bottom: 1.5rem;">
@@ -170,9 +300,11 @@
                 <!-- Customer Info -->
                 <div style="background: #f9f9f9; padding: 0.8rem; border-radius: 6px; margin-bottom: 1rem;">
                     <p style="margin-bottom: 0.3rem;"><strong style="display:inline-block; width: 70px;">Name:</strong>
-                        <span id="view-customer-name"></span></p>
+                        <span id="view-customer-name"></span>
+                    </p>
                     <p style="margin-bottom: 0.3rem;"><strong style="display:inline-block; width: 70px;">Phone:</strong>
-                        <span id="view-customer-phone"></span></p>
+                        <span id="view-customer-phone"></span>
+                    </p>
                     <p style="margin-bottom: 0.3rem;"><strong
                             style="display:inline-block; width: 70px;">Location:</strong> <span
                             id="view-customer-location"></span></p>
@@ -224,7 +356,9 @@
                     <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
                 </svg>
             </div>
-            <h2>Admin Access</h2>
+            <div style="font-family: 'Great Vibes', cursive; font-size: 2rem; color: #2C1B10; margin-bottom: 0.5rem;">
+                Maa Handloom</div>
+            <h2 style="text-transform: uppercase; font-size: 1.2rem; letter-spacing: 1px;">ADMIN ACCESS</h2>
             <p style="color: #666; font-size: 0.9rem; margin-bottom: 1.5rem;">Please enter your passcode to continue</p>
             <form id="auth-form" style="width: 100%;">
                 <div class="input-group">
