Add IN-TRANSIT status option to Admin Panel

--- a/admin.html
+++ b/admin.html
@@ -357,6 +357,7 @@
                             style="flex: 1; margin: 0; background: white;">
                             <option value="new">NEW</option>
                             <option value="in-process">IN-PROCESS</option>
+                            <option value="in-transit">IN-TRANSIT</option>
                             <option value="completed">COMPLETED</option>
                         </select><button id="modal-update-status-btn" class="btn-save-modern"
                             style="width: auto; margin: 0; padding: 0 1.5rem;">UPDATE</button>
