--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
         </p>
 
         <p style="margin-bottom: 1.5rem;">
-            We work closely with skilled weavers and artisan communities, ensuring ethical practices, fair wages, and
+            We work closely with skilled weavers and artisa communities, ensuring ethical practices, fair wages, and
             sustainable craftsmanship. By choosing our products, you are not just purchasing a textile — you are
             supporting livelihoods, culture, and centuries-old traditions.
         </p>
