Fix: Correct sidebar links in Admin Panel to use app routes

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -213,10 +213,10 @@
                     <line x1="18" y1="6" x2="6" y2="18"></line>
                     <line x1="6" y1="6" x2="18" y2="18"></line>
                 </svg></button></div>
-        <div class="sidebar-menu"><a href="categories.html" class="menu-item">Categories</a><a href="about.html"
-                class="menu-item">About Us</a><a href="contact.html" class="menu-item">Contact Us</a><a
-                href="refund.html" class="menu-item">Refund & Return</a><a href="track-order.html"
-                class="menu-item">Track Your Order</a><a href="index.html" class="menu-item">Home</a></div>
+        <div class="sidebar-menu"><a href="/categories" class="menu-item">Categories</a><a href="/about"
+                class="menu-item">About Us</a><a href="/contact" class="menu-item">Contact Us</a><a href="/refund"
+                class="menu-item">Refund & Return</a><a href="/track-order" class="menu-item">Track Your Order</a><a
+                href="/" class="menu-item">Home</a></div>
         <div class="admin-link-container"><a href="admin.html" class="admin-link">Admin Panel <svg
                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
