Refactor complete: Dynamic categories, Branding updates, Admin Panel fixes

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
         </button>
-        <div class="nav-logo">Indrita Fabrics</div>
+        <div class="nav-logo">Rasobhoomi</div>
 
         <!-- Search Bar (Hidden by default) -->
         <div class="search-bar-container">
@@ -101,34 +101,34 @@
             About Us</h1>
 
         <p style="margin-bottom: 1.5rem; font-size: 1.1rem;">
-            At <strong>Indrita Fabrics</strong>, we celebrate the timeless beauty of handloom and the artisans who bring
-            it
-            to life. Rooted in tradition and driven by quality, our journey began with a simple vision — to preserve
-            India’s rich weaving heritage while making authentic handcrafted textiles accessible to today’s world.
+            At <strong>Rasobhoomi</strong>, we believe in the magic of nature and the peace it brings to our lives.
+            Rooted in a passion for greenery, our mission is to bring the finest collection of fruit plants, exotic
+            trees,
+            and gardening essentials directly to your doorstep.
         </p>
 
         <p style="margin-bottom: 1.5rem;">
-            Each piece in our collection is thoughtfully created using traditional techniques passed down through
-            generations. From the careful selection of yarns to the intricate weaving process, every product reflects
-            patience, skill, and artistry. No two creations are exactly alike — and that uniqueness is what makes
-            handloom truly special.
+            Each plant in our nursery is nurtured with care and expertise. From the sweetest <strong>Indian
+                Mangoes</strong> to
+            rare <strong>Foreigner varieties</strong>, every sapling reflects our commitment to quality and growth.
+            We ensure that what you receive is healthy, vibrant, and ready to thrive in your garden.
         </p>
 
         <p style="margin-bottom: 1.5rem;">
-            We work closely with skilled weavers and artisa communities, ensuring ethical practices, fair wages, and
-            sustainable craftsmanship. By choosing our products, you are not just purchasing a textile — you are
-            supporting livelihoods, culture, and centuries-old traditions.
+            We work closely with expert horticulturists to maintain a diverse and sustainable collection.
+            By choosing Rasobhoomi, you are not just buying a plant — you are inviting nature into your home,
+            supporting a greener planet, and cultivating a legacy of growth.
         </p>
 
         <p style="margin-bottom: 1.5rem;">
-            Blending heritage with contemporary design, <strong>Indrita Fabrics</strong> offers creations that are
-            elegant,
-            durable, and meaningful. Whether it’s for everyday wear or special occasions, our handloom products are
-            designed to be cherished for years to come.
+            Whether you are a seasoned gardener or just starting your green journey, <strong>Rasobhoomi</strong> is here
+            to grow with you.
+            Our plants are more than just products; they are living companions that bring joy and fresh air to your
+            life.
         </p>
 
         <p style="text-align: center; font-style: italic; font-weight: bold; margin-top: 3rem; color: #2C1B10;">
-            Thank you for being part of our story and for supporting handmade.
+            Cultivating nature, delivering joy.
         </p>
     </main>
 
@@ -167,7 +167,7 @@
             </a>
         </div>
         <div class="copyright">
-            Indrita Fabrics. All rights reserved.
+            Rasobhoomi. All rights reserved.
         </div>
     </footer>
 
