--- a/pages/admin.html
+++ b/pages/admin.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - Mobile E-commerce</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../src/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
     <style>
@@ -201,7 +201,7 @@
                 <line x1="3" y1="6" x2="21" y2="6"></line>
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg></button>
-        <div class="nav-logo">Indrita Fabrics</div>
+        <div class="nav-logo">Rasobhoomi</div>
         <!-- No Cart in Admin usually -->
         <div class="nav-icon" style="opacity: 0; pointer-events: none;"></div>
     </nav>
@@ -235,10 +235,7 @@
         <!-- Product Filters -->
         <div id="product-filters" class="admin-filters" style="display: none;">
             <div style="display: flex; gap: 0.5rem; flex-wrap: wrap; justify-content: center; width: 100%;">
-                <button class="filter-chip active" data-type="product" data-filter="all">ALL</button><button
-                    class="filter-chip" data-type="product" data-filter="Surat Silk Special">SILK</button><button
-                    class="filter-chip" data-type="product" data-filter="Handloom Special">HANDLOOM</button><button
-                    class="filter-chip" data-type="product" data-filter="Cotton Varieties">COTTON</button>
+                <button class="filter-chip active" data-type="product" data-filter="all">ALL</button>
             </div>
             <div style="width: 100%; display: flex; justify-content: center; margin-top: 0.5rem;"><button
                     class="filter-chip" data-type="product" data-filter="out-of-stock"
@@ -295,12 +292,6 @@
                     <!-- Category Dropdown --><select id="product-category" class="modern-input" required
                         style="background: white;">
                         <option value="" disabled selected>Select Category</option>
-                        <option value="Surat Silk Special">Surat Silk Special
-                        </option>
-                        <option value="Handloom Special">Handloom Special</option>
-                        <option value="Shantipuri Special">Shantipuri Special
-                        </option>
-                        <option value="Cotton Varieties">Cotton Varieties</option>
                     </select>
                     <!-- Qty input with spinner can be styled but standard input is
                                                             fine for now, just apply class --><input type="number"
@@ -382,7 +373,7 @@
                     </svg></div>
                 <div
                     style="font-family: 'Great Vibes', cursive; font-size: 2rem; color: #2C1B10; margin-bottom: 0.5rem;">
-                    Indrita Fabrics</div>
+                    Rasobhoomi</div>
                 <h2 style="text-transform: uppercase; font-size: 1.2rem; letter-spacing: 1px;">
                     ADMIN ACCESS</h2>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 1.5rem;">
